Feat Criacao do swagger de paciente e skills
