# internal/doctor/handler/doctor.handler.go
@@ -5,6 +5,9 @@ import (
 	inter "millieMind/internal/doctor/interface"
 	service "millieMind/internal/doctor/service"
 	pInter "millieMind/internal/pacient/interface"
+	pService "millieMind/internal/pacient/service"
+	sInter "millieMind/internal/skills/interface"
+	sService "millieMind/internal/skills/service"
 	errors "millieMind/middleware/interfaces/errors"
 
 	"github.com/gin-gonic/gin"
@@ -64,15 +67,15 @@ func ModifyDoctor(c *gin.Context) {
 	service.ModifyDoctor(c, input)
 }
 
-// @Summary Criar token de auth
-// @Description Cria um toke para auth do usuario
+// @Summary Criar Paciente
+// @Description Criar um novo paciente
 // @Tags Pacient
 // @Accept json
 // @Produce json
-// @Param request body pInter.InputPacient true "Dados do Doutor a ser criado"
+// @Param request body pInter.InputPacient true "Dados do paciente a ser criado"
 // @Param Authorization header string true "Token de autenticação (Colocar o token deixando o Bearer)" default(Bearer <token>)
 // @Success 200 {object} pInter.Pacient "token make:"
-// @Router /add-pacient [post]
+// @Router /api/add-pacient [post]
 func AddPacient(c *gin.Context) {
 	var input pInter.InputPacient
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -80,7 +83,25 @@ func AddPacient(c *gin.Context) {
 		c.Status(errors.StatusNotAcceptable)
 		return
 	}
+	pService.CreatePacient(c, input)
 }
-func ModifySkills(c *gin.Context) {
 
+// @Summary Editar Skills
+// @Description Mudar o valor da habilidade do paciente
+// @Tags Pacient
+// @Accept json
+// @Produce json
+// @Param request body sInter.Skills true "Dados da habilidade"
+// @Param Authorization header string true "Token de autenticação (Colocar o token deixando o Bearer)" default(Bearer <token>)
+// @Success 200 {object} inter.OutputDoctor "Habilidade editada com sucesso"
+// @Failure 406 {object} errors.NotAcceptable "Error"
+// @Router /api/modif-skill [put]
+func ModifySkills(c *gin.Context) {
+	var input sInter.Skills
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.Set("Response", "Paramets is invalid, need a json")
+		c.Status(errors.StatusNotAcceptable)
+		return
+	}
+	sService.ModifSkills(c, input)
 }
